--- a/README.Rmd
+++ b/README.Rmd
@@ -32,5 +32,5 @@ It watches for changes and live-previews in the browser.
 To publish on https://christophsax.github.io/seasonalbook.content/, run:
 
 ```sh
-quarto preview quarto
+quarto publish gh-pages
 ```
