--- a/11-introduction.qmd
+++ b/11-introduction.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("polishing")  # drafting, polishing, complete
+status("polishing", "2022-12-21")  # drafting, polishing, complete
 ```
 
 
