--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,7 @@
 }
 
 @manual{aisch16,
-  title =        {{\pkg{gunsales}: Statistical Analysis of Monthly
+  title =        {{gunsales: Statistical Analysis of Monthly
                   Background Checks of Gun Purchases}},
   author =       {Gregor Aisch and Josh Keller and Dirk Eddelbuettel},
   year =         2017,
@@ -65,8 +65,8 @@
 }
 
 @manual{ellis16,
-  title =        {{\pkg{ggseas}}: 'stats' for Seasonal Adjustment on
-                  the Fly with {\pkg{ggplot2}}},
+  title =        {{ggseas}: 'stats' for Seasonal Adjustment on
+                  the Fly with {ggplot2}},
   author =       {Peter Ellis},
   year =         2017,
   note =         {R package version 0.5.1},
@@ -120,7 +120,7 @@
 }
 
 @Manual{hafen16,
-  title =        {{\pkg{stlplus}: Enhanced Seasonal Decomposition of
+  title =        {{stlplus: Enhanced Seasonal Decomposition of
                   Time Series by Loess}},
   author =       {Ryan Hafen},
   year =         2016,
@@ -132,7 +132,7 @@
   author =       {Alexander Kowarik and Angelika Meraner and Matthias
                   Templ and Daniel Schopfhauser},
   title =        {{Seasonal Adjustment with the \proglang{R} Packages
-                  {\pkg{x12}} and {\pkg{x12GUI}}}},
+                  {x12} and {x12GUI}}},
   journal =      {Journal of Statistical Software},
   volume =       62,
   number =       1,
@@ -172,7 +172,7 @@
 }
 
 @manual{seasonal,
-  title =        {{\pkg{seasonal}: \proglang{R} Interface to
+  title =        {{seasonal: \proglang{R} Interface to
                   X-13-ARIMA-SEATS}},
   author =       {Christoph Sax},
   year =         2018,
@@ -181,7 +181,7 @@
 }
 
 @manual{seasonalview,
-  title =        {{\pkg{seasonalview}: Graphical User Interface for
+  title =        {{seasonalview: Graphical User Interface for
                   Seasonal Adjustment}},
   author =       {Christoph Sax},
   year =         2017,
@@ -190,7 +190,7 @@
 }
 
 @manual{shiny16,
-  title =        {{\pkg{shiny}: Web Application Framework for
+  title =        {{shiny: Web Application Framework for
                   \proglang{R}}},
   author =       {Winston Chang and Joe Cheng and JJ Allaire and Yihui
                   Xie and Jonathan McPherson},
@@ -200,7 +200,7 @@
 }
 
 @manual{x13binary,
-  title =        {{\pkg{x13binary}: Provide the 'x13ashtml' Seasonal
+  title =        {{x13binary: Provide the 'x13ashtml' Seasonal
                   Adjustment Binary}},
   author =       {Dirk Eddelbuettel and Christoph Sax},
   year =         2017,
@@ -209,7 +209,7 @@
 }
 
 @manual{x13prebuilt,
-  title =        {{\pkg{x13prebuilt}: Pre-built Binaries of
+  title =        {{x13prebuilt: Pre-built Binaries of
                   X-13ARIMA-SEATS}},
   author =       {Dirk Eddelbuettel and Christoph Sax},
   year =         2017,
